--- a/index.html
+++ b/index.html
@@ -17,73 +17,73 @@
             <ul class="categories list">
                 <li class="categories item">
                     <a href="/" class="categories link">
-                        <img src="./images/baikal-hotels.jpg" alt="Турбазы на Байкале">
+                        <img src="./images/categories/baikal-hotels.jpg" alt="Турбазы на Байкале">
                         <h3 class="categories title">Турбазы на Байкале</h3>
                     </a>
                 </li>
                 <li class="categories item">
                     <a href="/" class="categories link">
-                        <img src="./images/excursions.jpg" alt="Экскурсии и туры">
+                        <img src="./images/categories/excursions.jpg" alt="Экскурсии и туры">
                         <h3 class="categories title">Экскурсии и туры</h3>
                     </a>
                 </li>
                 <li class="categories item">
                     <a href="/" class="categories link">
-                        <img src="./images/fishing.jpg" alt="Охота и рыбалка">
+                        <img src="./images/categories/fishing.jpg" alt="Охота и рыбалка">
                         <h3 class="categories title">Охота и рыбалка</h3>
                     </a>
                 </li>
                 <li class="categories item">
                     <a href="/" class="categories link">
-                        <img src="./images/extreme-tours.jpg" alt="Экстрим туры">
+                        <img src="./images/categories/extreme-tours.jpg" alt="Экстрим туры">
                         <h3 class="categories title">Экстрим туры</h3>
                     </a>
                 </li>
                 <li class="categories item">
                     <a href="/" class="categories link">
-                        <img src="./images/yachts.jpg" alt="Теплоходы, яхты">
+                        <img src="./images/categories/yachts.jpg" alt="Теплоходы, яхты">
                         <h3 class="categories title">Теплоходы, яхты</h3>
                     </a>
                 </li>
                 <li class="categories item">
                     <a href="/" class="categories link">
-                        <img src="./images/baikal-nature.jpg" alt="Красоты Байкала">
+                        <img src="./images/categories/baikal-nature.jpg" alt="Красоты Байкала">
                         <h3 class="categories title">Теплоходы, яхты</h3>
                     </a>
                 </li>
                 <li class="categories item">
                     <a href="/" class="categories link">
-                        <img src="./images/ulan-ude.jpg" alt="Гостиницы в Улан-Удэ">
+                        <img src="./images/categories/ulan-ude.jpg" alt="Гостиницы в Улан-Удэ">
                         <h3 class="categories title">Гостиницы в Улан-Удэ</h3>
                     </a>
                 </li>
                 <li class="categories item">
                     <a href="/" class="categories link">
-                        <img src="./images/transport.jpg" alt="Транспорт">
+                        <img src="./images/categories/transport.jpg" alt="Транспорт">
                         <h3 class="categories title">Транспорт</h3>
                     </a>
                 </li>
                 <li class="categories item">
                     <a href="/" class="categories link">
-                        <img src="./images/business-tourism.jpg" alt="Деловой туризм">
+                        <img src="./images/categories/business-tourism.jpg" alt="Деловой туризм">
                         <h3 class="categories title">Деловой туризм</h3>
                     </a>
                 </li>
                 <li class="categories item">
                     <a href="/" class="categories link">
-                        <img src="./images/baikal-cruises.jpg" alt="Круизы по Байкалу">
+                        <img src="./images/categories/baikal-cruises.jpg" alt="Круизы по Байкалу">
                         <h3 class="categories title">Круизы по Байкалу</h3>
                     </a>
                 </li>
                 <li class="categories item">
                     <a href="/" class="categories link">
-                        <img src="./images/winter-tours.jpg" alt="Зимние туры">
+                        <img src="./images/categories/winter-tours.jpg" alt="Зимние туры">
                         <h3 class="categories title">Зимние туры</h3>
                     </a>
                 </li>
                 <li class="categories item">
                     <a href="/" class="categories link">
-                        <img src="./images/about-baikal.jpg" alt="Карта Байкала">
+                        <img src="./images/categories/about-baikal.jpg" alt="Карта Байкала">
                         <h3 class="categories title">Карта Байкала</h3>
                     </a>
                 </li>
